--- a/P1.ipynb
+++ b/P1.ipynb
@@ -447,7 +447,7 @@
     "\n",
     "    final = image\n",
     "    \n",
-    "    #plt.imshow(final)\n",
+    "    #plt.imshow(image)\n",
     "    \n",
     "    return final\n",
     "\n",
